--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "chart.js": "^3.3.2",
         "react-chartjs-2": "^3.0.3",
         "react-cookies": "^0.1.1",
+        "react-datepicker": "^4.1.1",
         "react-flash-message": "^1.0.7",
         "react-qr-code": "^1.1.1",
         "react-router-dom": "^5.2.0"
