--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,6 +33,8 @@ jobs:
           extension-csv: mbstring, bcmath # Setup any required extensions for tests
       - name: Composer install
         run: composer install
+      - name: Generate key
+        run: php artisan key:generate
       - name: Run Tests
         run: ./vendor/bin/phpunit
   deploy:
