--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,17 +26,24 @@ jobs:
     needs: build-js
     steps:
       - uses: actions/checkout@v1
-      - name: Setup PHP
-        uses: shivammathur/setup-php@master
-        with:
-          php-version: 7.4 # Use your PHP version
-          extension-csv: mbstring, bcmath # Setup any required extensions for tests
-      - name: Composer install
-        run: composer install
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Generate key
         run: php artisan key:generate
-      - name: Run Tests
-        run: ./vendor/bin/phpunit
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
+          env:
+            DB_CONNECTION: sqlite
+            DB_DATABASE: database/database.sqlite
+          run: vendor/bin/phpunit
+
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
