--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,24 +26,19 @@ jobs:
     needs: build-js
     steps:
       - uses: actions/checkout@v1
+      - name: Setup PHP
+        uses: shivammathur/setup-php@master
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
-        run: composer install --optimize-autoloader --no-interaction --prefer-dist --ignore-platform-reqs --no-dev
       - name: Generate key
         run: php artisan key:generate
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
-      - name: Create Database
-        run: |
-          mkdir -p database
-          touch database/database.sqlite
-      - name: Execute tests (Unit and Feature tests) via PHPUnit
-        env:
-          DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
-        run: vendor/bin/phpunit
-
+        with:
+          php-version: 7.4
+          extension-csv: mbstring, bcmath
+      - name: Install Dependencies
+        run: composer install --optimize-autoloader --no-interaction --prefer-dist --ignore-platform-reqs --no-dev
+      - name: Run Tests
+        run: ./vendor/bin/phpunit
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
