--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -69,4 +69,4 @@ jobs:
       - name: Deploy to Prod
         env:
           DOT_ENV: ${{ secrets.DOT_ENV }}
-        run: dep deploy production --tag='refs/heads/master' -vvv
+        run: dep deploy master --tag='refs/heads/master' -vvv
